K8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: website-deployment
  namespace: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: website

  template:
    metadata:
      labels:
        app: website

    spec:
      containers:
        - name: website
          image: dakshata16/k8s-github-actions-project:v2
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
