K8s/Service.yaml
apiVersion: v1

kind: Service

metadata:
  name: website-service
  namespace: dev

spec:
  type: NodePort

  selector:
    app: website

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
